<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grass"
    tools:context=".GameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sky"
        android:id="@+id/topBar">
        <ImageView
            android:id="@+id/imageHeart1"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/placeholder_heart" />

        <ImageView
            android:id="@+id/imageHeart2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/imageHeart1"
            android:layout_toRightOf="@+id/imageHeart1"
            android:src="@drawable/placeholder_heart" />

        <ImageView
            android:id="@+id/imageHeart3"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/imageHeart2"
            android:layout_toRightOf="@+id/imageHeart2"
            android:src="@drawable/placeholder_heart" />

        <ImageView
            android:id="@+id/imageHeart4"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/imageHeart3"
            android:layout_toRightOf="@+id/imageHeart3"
            android:src="@drawable/placeholder_heart" />

        <ImageView
            android:id="@+id/imageHeart5"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/imageHeart4"
            android:layout_toRightOf="@+id/imageHeart4"
            android:src="@drawable/placeholder_heart" />
        <TextView
            android:id="@+id/txtTimeLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/txtTimeVal"
            android:layout_toLeftOf="@+id/txtTimeVal"
            android:text="@string/time"
            android:textSize="14sp"
            />
    <TextView
        android:id="@+id/txtTimeVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/zero"
        android:textSize="14sp"
        />

</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomBar"
        android:layout_below="@id/topBar"
        android:orientation="vertical"
        android:weightSum="3.75"
        >

        <!-- row0 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/row0"
            android:layout_weight="0.5"
            android:background="@drawable/hills"
            >
        </RelativeLayout>

        <!-- row1 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/row1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">
                <ImageView
                    android:id="@+id/imageMole1"
                    android:layout_width="105dp"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/placeholder_moleguy"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageMole2"
                    android:layout_width="105dp"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/placeholder_moleguy"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageMole3"
                    android:layout_width="105dp"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/placeholder_moleguy"
                    >
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grass"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:weightSum="3"
                >
                <ImageView
                    android:id="@+id/imageHill1"
                    android:layout_width="105dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/placeholder_hole"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageHill2"
                    android:layout_width="105dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/placeholder_hole"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageHill3"
                    android:layout_width="105dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/placeholder_hole"
                    >
                </ImageView>
            </LinearLayout>

        </RelativeLayout>

        <!-- row2 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/row2"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">
                <ImageView
                    android:id="@+id/imageMole4"
                    android:layout_width="105dp"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/placeholder_moleguy"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageMole5"
                    android:layout_width="105dp"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/placeholder_moleguy"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageMole6"
                    android:layout_width="105dp"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/placeholder_moleguy"
                    >
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grass"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:weightSum="3"
                >
                <ImageView
                    android:id="@+id/imageHill4"
                    android:layout_width="105dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/placeholder_hole"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageHill5"
                    android:layout_width="105dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/placeholder_hole"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageHill6"
                    android:layout_width="105dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/placeholder_hole"
                    >
                </ImageView>
            </LinearLayout>

        </RelativeLayout>

        <!-- row3 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/row3"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3">
                <ImageView
                    android:id="@+id/imageMole7"
                    android:layout_width="105dp"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/placeholder_moleguy"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageMole8"
                    android:layout_width="105dp"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/placeholder_moleguy"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageMole9"
                    android:layout_width="105dp"
                    android:layout_height="80dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/placeholder_moleguy"
                    >
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grass"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:weightSum="3"
                >
                <ImageView
                    android:id="@+id/imageHill7"
                    android:layout_width="105dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/placeholder_hole"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageHill8"
                    android:layout_width="105dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/placeholder_hole"
                    >
                </ImageView>
                <ImageView
                    android:id="@+id/imageHill9"
                    android:layout_width="105dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/placeholder_hole"
                    >
                </ImageView>
            </LinearLayout>

        </RelativeLayout>

        <!-- row4 -->
        <RelativeLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:background="@drawable/underground"
            >
        </RelativeLayout>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/underground"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/txtScoreLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/score"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/txtScoreVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/txtScoreLbl"
            android:layout_toRightOf="@id/txtScoreLbl"
            android:text="@string/zero"
            android:textSize="14sp"
            />
    </RelativeLayout>



</RelativeLayout>